--- a/ImageRecogUsingConvNet.ipynb
+++ b/ImageRecogUsingConvNet.ipynb
@@ -1366,6 +1366,244 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Part II - Section 9 :\n",
+    "#### Face Detection with One Shot Learning\n",
+    "\n",
+    "With the above face embedding we can create a face detector using One Shot Learning, where we will save a single image of each person and compare their embedding with the embedding of the face detected in the camera screen. \n",
+    "\n",
+    "One major advantage is we do not have to train the model with new faces, when a new person's image has been added to our database it will automatically compare the embedding with that image and classify it."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a database with images captured by the webcam of the laptop - \n",
+    "\n",
+    "Method - \n",
+    "   1. Run the following code\n",
+    "   2. Press Enter to capture the images stored in the Dataset/FaceDetector Folder\n",
+    "   3. Take the best picture rename the files with the actual name and discard others\n",
+    "   4. Press Esc to close the window"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import glob\n",
+    "import cv2\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createDataset():\n",
+    "    cam = cv2.VideoCapture(0)\n",
+    "\n",
+    "    face_detector = cv2.CascadeClassifier('haarcascades/haarcascade_frontalface_default.xml')\n",
+    "\n",
+    "    count = 0\n",
+    "    while(True):\n",
+    "        ret, img = cam.read()\n",
+    "        #gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+    "        faces = face_detector.detectMultiScale(img, 1.3, 5)\n",
+    "        for (x,y,w,h) in faces:\n",
+    "            x1 = x\n",
+    "            y1 = y\n",
+    "            x2 = x+w\n",
+    "            y2 = y+h\n",
+    "            cv2.rectangle(img, (x1,y1), (x2,y2), (255,255,255), 2)     \n",
+    "            count += 1\n",
+    "            cv2.imshow('image', img)\n",
+    "\n",
+    "        k = cv2.waitKey(200) & 0xff # Press 'ESC' for exiting video\n",
+    "        if k == 27:\n",
+    "            break\n",
+    "        elif k == 13: # Press Enter to capture the images detected in the screen\n",
+    "            # Save the captured image into the datasets folder\n",
+    "            cv2.imwrite(\"Dataset/FaceDetector/User_\" + str(count) + \".jpg\", img[y1:y2,x1:x2])\n",
+    "\n",
+    "    cam.release()\n",
+    "    cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call CreateDataset() function\n",
+    "createDataset()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create embedding Dictionary for the Database Images\n",
+    "\n",
+    "We will now create a dictionary of embedding vectors for each image from our database, key will be the name of the file and value will be the embedding vectors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_input_image_embeddings():\n",
+    "    input_embeddings = {}\n",
+    "\n",
+    "    for file in glob.glob(\"Dataset/FaceDetector/*.jpg\"):\n",
+    "        person_name = os.path.splitext(os.path.basename(file))[0]\n",
+    "        #print(person_name)\n",
+    "        image_file = cv2.imread(file, 1) # read the image\n",
+    "        # Convert the image in correct shape required for our Model\n",
+    "        img = cv2.resize(image_file,(224,224)) \n",
+    "        img = np.expand_dims(img, axis=0)\n",
+    "        input_embeddings[person_name] = vgg_face_descriptor.predict(img)[0,:] # Save the embeddings for the image \n",
+    "                                                                              # in the dictionary\n",
+    "    return input_embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Create the Face Recognition function \n",
+    "\n",
+    "Logic :\n",
+    "   * Detect the faces with in the camera window\n",
+    "   * For each face detected in the window calculate the embedding and compare the euclidean distance with the images stored in the  database\n",
+    "   * Return a match when the euclidean distance is less than a pre-defined threshold\n",
+    "   * This threshold needs to be adjusted according to the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recognize_face(face_image, input_embeddings):\n",
+    "    # Inputs: \n",
+    "    # face_image - input image\n",
+    "    # input_embeddings - dictionary containing the embedding of database images\n",
+    "    \n",
+    "    # Resize the images according to the expected input of the model\n",
+    "    face_image = cv2.resize(face_image,(224,224))\n",
+    "    face_image = np.expand_dims(face_image,axis=0)\n",
+    "    embedding = vgg_face_descriptor.predict(face_image)[0,:] # get the embedding\n",
+    "    \n",
+    "    minimum_distance = 200\n",
+    "    name = None\n",
+    "    \n",
+    "    # Loop over  names and encodings.\n",
+    "    for (input_name, input_embedding) in input_embeddings.items():\n",
+    "        \n",
+    "        # Calculate theDistances\n",
+    "        euclidean_distance = np.linalg.norm(embedding-input_embedding)\n",
+    "        \n",
+    "\n",
+    "        print('Euclidean distance from %s is %s' %(input_name, euclidean_distance))\n",
+    "\n",
+    "        \n",
+    "        if euclidean_distance < minimum_distance:\n",
+    "            minimum_distance = euclidean_distance\n",
+    "            name = input_name\n",
+    "    \n",
+    "    # Distance Threshold as 100 (change this value accordingly)\n",
+    "    if minimum_distance < 100:\n",
+    "        return str(name +\":\" + str(euclidean_distance))\n",
+    "    else:\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Detect images through webcam and show the detected labels with the distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recognize_faces_in_cam(input_embeddings):\n",
+    "    \n",
+    "\n",
+    "    cv2.namedWindow(\"Face Recognizer\")\n",
+    "    vc = cv2.VideoCapture(0)\n",
+    "   \n",
+    "\n",
+    "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
+    "    face_cascade = cv2.CascadeClassifier('haarcascades/haarcascade_frontalface_default.xml')\n",
+    "    \n",
+    "    \n",
+    "    while vc.isOpened():\n",
+    "        _, frame = vc.read()\n",
+    "        img = frame\n",
+    "        height, width, channels = frame.shape\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
+    "        faces = face_cascade.detectMultiScale(gray, 1.3, 5)\n",
+    "\n",
+    "        # Loop through all the faces detected \n",
+    "        identities = []\n",
+    "        for (x, y, w, h) in faces:\n",
+    "            x1 = x\n",
+    "            y1 = y\n",
+    "            x2 = x+w\n",
+    "            y2 = y+h\n",
+    "\n",
+    "           \n",
+    "            \n",
+    "            face_image = frame[max(0, y1):min(height, y2), max(0, x1):min(width, x2)]   \n",
+    "            \n",
+    "            # Identify the faces detected in the cam\n",
+    "            identity = recognize_face(face_image, input_embeddings)\n",
+    "\n",
+    "            if identity is not None:\n",
+    "                img = cv2.rectangle(frame,(x1, y1),(x2, y2),(255,255,255),2)\n",
+    "                cv2.putText(img, str(identity), (x1+5,y1-5), font, 1, (255,255,255), 2) # show the name \n",
+    "        \n",
+    "        key = cv2.waitKey(100)\n",
+    "        cv2.imshow(\"Face Recognizer\", img)\n",
+    "\n",
+    "        if key == 27: # exit on ESC\n",
+    "            break\n",
+    "    vc.release()\n",
+    "    cv2.destroyAllWindows()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Call the functions to start the detector\n",
+    "input_embeddings = create_input_image_embeddings()\n",
+    "recognize_faces_in_cam(input_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Reference: \n",
     "\n",
     " * http://www.robots.ox.ac.uk/~vgg/publications/2015/Parkhi15/parkhi15.pdf\n",
@@ -1373,7 +1611,8 @@
     " * (VGG Facenet.). Retrieved from http://www.robots.ox.ac.uk/~vgg/software/vgg_face/\n",
     " * Grauturgrautur 12.3k3185119, Dougdoug 55.3k17141186, PaoloPaolo 2, Rymurrrymurr 341211, Greg SnowGreg Snow 40.8k35988, & Ch3och3o 111. (n.d.). Placing Custom Images in a Plot Window--as custom data markers or to annotate those markers. Retrieved from https://stackoverflow.com/questions/4860417/placing-custom-images-in-a-plot-window-as-custom-data-markers-or-to-annotate-t\n",
     " * How to Visualize the Clusters in a K-Means Unsupervised Learning Model. (n.d.). Retrieved from https://www.dummies.com/programming/big-data/data-science/how-to-visualize-the-clusters-in-a-k-means-unsupervised-learning-model/\n",
-    " * Tutorial: How to determine the optimal number of clusters for k-means clustering. (n.d.). Retrieved from https://blog.cambridgespark.com/how-to-determine-the-optimal-number-of-clusters-for-k-means-clustering-14f27070048f"
+    " * Tutorial: How to determine the optimal number of clusters for k-means clustering. (n.d.). Retrieved from https://blog.cambridgespark.com/how-to-determine-the-optimal-number-of-clusters-for-k-means-clustering-14f27070048f\n",
+    " * Joshi, S., & Joshi, S. (2018, October 14). Face recognizer application using a deep learning model (Python and Keras). Retrieved from https://medium.com/@sumantrajoshi/face-recognizer-application-using-a-deep-learning-model-python-and-keras-2873e9aa6ab3"
    ]
   }
  ],
